[package]
name = "legion-sync"
version = "0.0.1"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"
description = "Tracks and syncronizes entity changes accross the network."
keywords = ["sync", "entity-sync", "network", "ecs", "legion"]
exclude = ["target", "Cargo.lock"]
license = "MIT"
repository = "https://github.com/entity-sync-rs/legion-sync/"
documentation = "https://docs.rs/legion-sync/"
readme = "README.md"

[dependencies]
net-sync = { version = "0.0.1", path = "../net-sync" }
track = { version = "0.1.0", path = "../track" }
legion-sync-macro = {path = "../legion-sync-macro" }

legion = { version = "0.2.1", branch = "clone_move_rebased", path = "../../legion", default-features=false}
serde = "1.0.104"
log = "0.4.8"
inventory = "0.1"