[package]
name = "legion-sync"
version = "0.0.1"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"
description = "Tracks and syncronizes entity changes accross the network."
keywords = ["sync", "entity-sync", "network", "ecs", "legion"]
exclude = ["target", "Cargo.lock"]
license = "MIT"
repository = "https://github.com/entity-sync-rs/legion-sync/"
documentation = "https://docs.rs/legion-sync/"
readme = "README.md"

[dependencies]
net-sync = { version = "0.0.1", path = "../net-sync" }
legion-sync-macro = {path = "../legion-sync-macro" }
itertools = "0.9.0"
crossbeam-channel="0.4.2"
#git="https://github.com/TomGillen/legion"
legion = { path = "../../legion", branch="master", version = "0.3.0", default-features=false, features=["serialize", "crossbeam-events"] }
serde = "1.0.104"
log = "0.4.8"
inventory = "0.1"
erased-serde = "0.3"
type-uuid = "0.1"
serde_json="1.0.56"

[dev-dependencies]
bincode = "1.3.1"